@@ -1,8 +1,9 @@
-name    = Dist-Zilla-PluginBundle-GENEHACK
-author  = John SJ Anderson <genehack@genehack.org>
-license = Perl_5
+name             = Dist-Zilla-PluginBundle-GENEHACK
+author           = John SJ Anderson <genehack@genehack.org>
+license          = Perl_5
 copyright_holder = John SJ Anderson
 copyright_year   = 2015
+main_module      = lib/Dist/Zilla/PluginBundle/GENEHACK.pm
 
 [@GENEHACK]
 
